fixed about section text width and page menu spacing

--- a/src/components/aboutPage/about.css
+++ b/src/components/aboutPage/about.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 3.5%;
+    padding: 85px 3.5%;
 }
 
 .about-text {
     width: 95%;
+    max-width: 700px;
     text-align: center;
     margin-bottom: 2%;
 }
