--- a/src/components/contactPage/contact.css
+++ b/src/components/contactPage/contact.css
@@ -1,6 +1,10 @@
 .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     text-align: center;
-    padding: 5% 0%;
+    padding: 85px 3.5%;
+    min-height: 100vh;
 }
 
 .contact h3 {
@@ -20,14 +24,11 @@
 
 .social-item {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: baseline;
+    justify-content: center;
     width: 15%;
-    overflow: scroll;
     margin: 2%;
     padding: 2%;
-    text-align: center;
     text-decoration: none;
     border-radius: 20px;
     color: currentColor;
